modifed the parse_trans config

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
         {parse_trans, "",
-         {git, "git://github.com/uwiger/parse_trans.git", {branch, "master"}}}
+         {git, "git://github.com/uwiger/parse_trans.git", {tag, "3.3.0"}}}
 ]}.
 
 {xref_checks, [undefined_function_calls]}.
